Add CIFAR10 tutorials

--- a/MultiLayerPerceptron.ipynb
+++ b/MultiLayerPerceptron.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -25,10 +25,41 @@
     "tf.reset_default_graph() \n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "mnist = input_data.read_data_sets(\"/tmp/data/\", one_hot=True)\n",
-    "%matplotlib inline\n",
+    "import matplotlib.pylab as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "What about multiple layers? Now we can easily see the difference. We write a function that define, intermediate layers and the number of hidden units they comprise, aswell as a final layer function. (Now we basically have Keras!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def next_layer(prev_layer, n_hidden_units):\n",
+    "    W = tf.Variable(tf.random_normal([int(prev_layer.get_shape()[1]), n_hidden_units]))\n",
+    "    b = tf.Variable(tf.random_normal([1,n_hidden_units]))\n",
+    "    return tf.nn.relu(tf.matmul(prev_layer,W) + b)\n",
     "\n",
-    "X = tf.placeholder(tf.float32, shape = [None, 784])\n",
-    "Y = tf.placeholder(tf.float32, shape = [None, 10])\n"
+    "def final_layer(prev_layer):\n",
+    "    W = tf.Variable(tf.random_normal([int(prev_layer.get_shape()[1]), 10]))\n",
+    "    b = tf.Variable(tf.random_normal([1,10]))\n",
+    "    return tf.matmul(prev_layer,W) + b\n",
+    "\n",
+    "hidden_layer1 = next_layer(X, 2000)\n",
+    "# hidden_layer2 = next_layer(hidden_layer1, 200)\n",
+    "# hidden_layer3 = next_layer(hidden_layer2, 200)\n",
+    "y = final_layer(hidden_layer1)"
    ]
   },
   {
