add neural networks notebook

--- a/17.06.05-Neural-networks.ipynb
+++ b/17.06.05-Neural-networks.ipynb
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$L(y,y') = - \\sum_i p_i(x) \\log q_i(x) = \\sum_i \\bigl(y_i \\log y_i' + (1-y_i) \\log (1-y_i')\\bigr)$$ "
+    "$$L(y,y') = - \\sum_i p_i(x) \\log q_i(x) = -\\bigl(y \\log y' + (1-y) \\log (1-y')\\bigr)$$ "
    ]
   },
   {
@@ -189,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now describe the propagation algorithm:"
+    "We can now describe the propagation algorithm"
    ]
   },
   {
@@ -230,12 +230,216 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* $a_1 = W_1X + b_1 $\n",
+    "* $h_1 = relu(a_1)$\n",
+    "* $a_2 = W_2h_1 + b_2$\n",
+    "* $y' = \\sigma(a_2)$\n",
+    "* $e = L(y',y)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A forward pass on our data will take a matrix $X$ and produce a vector of predictions $Y'$. We defined a cost function based on the cross-entropy of $Y'$ with respect to $Y$, defined above. This gives us $e$ = $L(Y,Y') = -(Y_i \\log Y_i' + (1-Y_i) \\log (1-Y_i'))$. Note that $e$ is a vector in its current form.\n",
+    "\n",
+    "We would like to know what the gradient of $e$ is with respect to all of our parameters, and then update them by a small amount to minimise the cost."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The algorithm for backpropagation from the Deep Learning book is terse."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* $\\mathbf{g}$ = $\\nabla_{y'}J$ Compute gradient on final layer.\n",
+    "* **for** $k = l, ..., 1$\n",
+    "    * $\\mathbf{g} = \\nabla_{\\mathbf{a}^{(k)}}J = \\mathbf{g} \\odot f^{'}(\\mathbf{a}^{(k)})$ Gradient on layer output. Element-wise multiplication if $f$ is element-wise.\n",
+    "    * $\\nabla_{\\mathbf{b}^{(k)}}J = \\mathbf{g} + \\lambda \\nabla_{\\mathbf{b}^{(k)}}\\Omega(\\theta)$ Compute gradients on biases\n",
+    "    * $\\nabla_{\\mathbf{W}^{(k)}}J = \\mathbf{g}\\ \\mathbf{h}^{(k-1)\\top} + \\lambda \\nabla_{\\mathbf{W}^{(k)}}\\Omega(\\theta)$ Compute gradients on weights\n",
+    "    * $ \\mathbf{g} = \\nabla_{\\mathbf{h}^{(k-1)}}J = \\mathbf{W}^{(k)\\top}$ Propagate gradients w.r.t lower-level hidden layer activations.\n",
+    "* **end for**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is a function diagram displaying our operations and intermediate values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\require{AMScd}$\n",
+    "\\begin{CD}\n",
+    "    X @>W_1, b_1>> a_1 @>relu>> h_1 @>W_2, h_2>> a_2 @>\\sigma>> Y' @>L>> e\n",
+    "\\end{CD}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That is, we would like expressions for: $\\frac{\\partial e}{\\partial W_2}, \\frac{\\partial e}{\\partial b_2}, \\frac{\\partial e}{\\partial W_1}, \\frac{\\partial e}{\\partial b_1}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the chain rule, we can see that:\n",
+    "$$ \\frac{\\partial e}{\\partial W_2} = \\frac{\\partial e}{\\partial a_2}\\frac{\\partial a_2}{\\partial W_2} , \\ \\ \\\n",
+    "\\frac{\\partial e}{\\partial a_2} = \\frac{\\partial e}{\\partial Y'}\\frac{\\partial Y'}{\\partial a_2}  $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we see that,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{\\partial e}{\\partial W_2} = \\frac{\\partial e}{\\partial Y'}\\frac{\\partial Y'}{\\partial a_2}\\frac{\\partial a_2}{\\partial W_2}, \\ \\ \\ \\frac{\\partial e}{\\partial b_2} = \\frac{\\partial e}{\\partial Y'}\\frac{\\partial Y'}{\\partial a_2}\\frac{\\partial a_2}{\\partial b_2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Therefore, we need to find expressions for:\n",
+    "$$\\frac{\\partial a_2}{\\partial b_2}, \\frac{\\partial a_2}{\\partial W_2}, \\frac{\\partial Y'}{\\partial a_2},   \\frac{\\partial e}{\\partial Y'} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, $$e = -\\bigl(Y \\log Y' + (1-Y) \\log (1-Y')\\bigr) \\implies \\frac{\\partial e}{\\partial Y'} = -\\Bigl(\\frac{Y}{Y'} - \\frac{(1-Y)}{(1-Y')}\\Bigr)$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also, $$ Y' = \\sigma (a_2) \\implies \\frac{\\partial y'}{\\partial a_2} = \\sigma(a_2)(1 - \\sigma(a_2))$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Substituting $Y_{i}' = \\sigma(a_{i2})$\n",
+    "\n",
+    "$$ \\frac{\\partial e}{\\partial a_2} = \\Bigl(\\frac{Y}{\\sigma(a_{2})} - \\frac{(1-Y)}{(1-\\sigma(a_{2}))}\\Bigr) \\sigma(a_{2})(1 - \\sigma(a_{2})) \n",
+    "= \\Bigl((1 - \\sigma(a_{2}))Y - \\sigma(a_{2})(1-Y)\\Bigr) = (Y' - Y)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\frac{\\partial e}{\\partial a_2} = (Y' - Y)$ is a remarkably simple expression, given the complexities of our loss function $L$, and final activation function $\\sigma$. In fact, it has been chosen to be so simple."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $\\frac{\\partial e}{\\partial a_2} = \\delta_3$. Let us first calculate $\\frac{\\partial e}{\\partial a_1}$ and name it $\\delta_2$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{\\partial e}{\\partial a_1} = \\frac{\\partial e}{\\partial a_2}\\frac{\\partial a_2}{\\partial a_1} = \\delta_3 \\frac{\\partial a_2}{\\partial h_1} \\frac{\\partial h_1}{\\partial a_1} = \\delta_3 W_{2}^T \\frac{\\partial h_1}{\\partial a_1}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since $h_1 = relu(a_1), \\frac{\\partial h_1}{\\partial a_1}$ is $1 $ for $a_1 > 0$ and $0$ otherwise. Call this function $drelu(a_1)$. Therefore: \n",
+    "\n",
+    "$$\\delta_2 = \\delta_3 W_{2}^T \\circ drelu(a_1)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now write down expressions for $\\frac{\\partial e}{\\partial W_2}, \\frac{\\partial e}{\\partial b_2}, \\frac{\\partial e}{\\partial W_1}, \\frac{\\partial e}{\\partial b_1}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{\\partial e}{\\partial W_2}  = \\frac{\\partial e}{\\partial a_2} \\frac{\\partial a_2}{\\partial W_2} = h_1^T\\delta_3$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and,\n",
+    "\n",
+    "$$\\frac{\\partial e}{\\partial b_2}  = \\frac{\\partial e}{\\partial a_2} \\frac{\\partial a_2}{\\partial b_2} = \\delta_3$$\n",
+    "\n",
+    "Also,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{\\partial e}{\\partial W_1} = \\frac{\\partial e}{\\partial a_2}\\frac{\\partial a_2}{\\partial a_1}\\frac{\\partial a_1}{\\partial W_1} = X^T \\circ \\delta_2$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and\n",
+    "\n",
+    "$$\\frac{\\partial e}{\\partial b_1} = \\frac{\\partial e}{\\partial a_2}\\frac{\\partial a_2}{\\partial a_1}\\frac{\\partial a_1}{\\partial b_1} = \\delta_2$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We will use the breast cancer data dataset. This defines a set of 30 predicters that are used to classify malignant vs benign breast cancer tumours."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 494,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -245,7 +449,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((569, 30), (569,))\n"
+      "((569, 30), (569, 1))\n"
      ]
     }
    ],
@@ -253,7 +457,7 @@
     "import scipy\n",
     "import sklearn.datasets\n",
     "cancer_data = sklearn.datasets.load_breast_cancer()\n",
-    "y = cancer_data.target\n",
+    "Y = cancer_data.target\n",
     "X = cancer_data.data\n",
     "X = (X - np.mean(X,axis=0)) / np.std(X,axis=0)\n",
     "print (X.shape, y.shape)"
@@ -268,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 770,
    "metadata": {
     "collapsed": false
    },
@@ -277,10 +481,7 @@
     "import numpy as np\n",
     "\n",
     "def rand_init(s,h):\n",
-    "    return np.random.random(size=(s,h)) - 0.5\n",
-    "W = {1: rand_init(30,h), 2: rand_init(5,1)}\n",
-    "h = {}\n",
-    "b = {1: rand_init(1,1), 2: rand_init(1,1)}"
+    "    return (np.random.random(size=(s,h)) - 0.5)/10\n"
    ]
   },
   {
@@ -294,18 +495,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 850,
    "metadata": {
+    "code_folding": [],
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def sigmoid(x):\n",
     "    return 1 / (1 + np.exp(-x))\n",
+    "W = {1: rand_init(30,5), 2: rand_init(5,1)}\n",
+    "h = {}\n",
+    "b = {1: rand_init(1,5), 2: rand_init(1,1)}\n",
+    "a = {}\n",
+    "def forward_pass(x):\n",
     "\n",
-    "def forward_pass(X):\n",
-    "\n",
-    "    a = {}\n",
     "    h[0] = X\n",
     "    for k in [1,2]:\n",
     "        a[k] = b[k] + np.dot(h[k-1],W[k])\n",
@@ -314,17 +518,6 @@
     "    y_pred = h[2]\n",
     "    y_pred = sigmoid(y_pred)\n",
     "    return y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y_pred = forward_pass(X)"
    ]
   },
   {
@@ -338,19 +531,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the backward pass, we need to define the cost function, $J$, as the cross-entropy between $y$ and $y'$."
+    "In addition to the input $\\mathbf{x}$, we need a target $\\mathbf{y}$. This computation yields the gradients on the activations $\\mathbf{a} ^{(k)}$ for each layer $k$. From the gradients on each layer, we can find the gradients on the parameters in each layer and incorporate them into a stochastic gradient descent update."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also need to define the cost function, $J$, as the cross-entropy between $y$ and $y'$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Algorithm**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 797,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def cost(y_real,y_pred):\n",
-    "    return -np.sum(y_real*np.log(y_pred) + (1-y_real)*np.log(1-y_pred))"
+    "    return - y_real*np.log(y_pred) - (1-y_real)*np.log(1-y_pred)\n",
+    "#     return np.square(y_real-y_pred)"
    ]
   },
   {
@@ -363,82 +571,85 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We need to compute the backward pass"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 798,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def dsigmoid(x):\n",
-    "    return sigmoid(x)*(1 - sigmoid(x))\n",
-    "\n",
-    "\n",
-    "\n",
-    "def backward_pass(y_pred):\n",
-    "    grad_y_pred = (y_pred - y) * dsigmoid(y_pred) # the last layer's error\n",
-    "    grad_w2 = h[1].T.dot(grad_y_pred)\n",
-    "    grad_h_relu = grad_y_pred.dot(W[2].T) # the second laye's error \n",
-    "    grad_h = grad_h_relu.copy()\n",
-    "    grad_h[h < 0] = 0  # the derivate of ReLU\n",
-    "    grad_w1 = h[0].T.dot(grad_h)\n",
-    "\n",
-    "\n",
-    "    W[1] -= learning_rate * grad_w1\n",
-    "    W[2] -= learning_rate * grad_w2"
+    "    return sigmoid(x)*(1 - sigmoid(x))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 258,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/fonz/anaconda/envs/deep/lib/python2.7/site-packages/ipykernel/__main__.py:11: VisibleDeprecationWarning: using a boolean instead of an integer will result in an error in the future\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "backward_pass(y_pred)"
+    "The derivative of the Relu function is: $0$ for $x <= 0$, and $1$ for $x > 0$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 799,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "learning_rate = 0.005\n",
-    "W = {1: rand_init(30,5), 2: rand_init(5,1)}\n",
-    "h = {}\n",
-    "b = {1: rand_init(1,1), 2: rand_init(1,1)}\n",
-    "def train():\n",
-    "    for i in range(100):\n",
-    "        y_pred = forward_pass(X)\n",
-    "        loss = cost(y,y_pred)\n",
-    "        if i%20 == 0:\n",
-    "            print (loss)\n",
-    "        backward_pass(y_pred)"
+    "def drelu(x):\n",
+    "    return 1 if x > 0 else 0\n",
+    "drelu = np.vectorize(drelu)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 950,
    "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def backward_pass(y_pred):   \n",
+    "    delta_3 = (y-y_pred) # Compute delta_3 = de/da_2\n",
+    "    \n",
+    "    #First layer updates\n",
+    "    \n",
+    "    db_2 = np.sum(delta_3, axis=0, keepdims=True)\n",
+    "    dW_2 = h[1].T.dot(delta_3)\n",
+    "    \n",
+    "    delta_2 = np.multiply(delta_3.dot(W[2].T), drelu(a[1]))\n",
+    "    dW_1 = X.T.dot(delta_2)\n",
+    "    db_1 = np.sum(delta_2, axis=0, keepdims=True)\n",
+    "\n",
+    "    W[1] -= learning_rate * dW_1\n",
+    "    b[1] -= learning_rate * db_1\n",
+    "\n",
+    "    W[2] -= learning_rate * dW_2\n",
+    "    b[2] -= learning_rate * db_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 952,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "learning_rate = 0.00001\n",
+    "W = {1: rand_init(30,5), 2: rand_init(5,1)}\n",
+    "h = {}\n",
+    "b = {1: rand_init(1,5), 2: rand_init(1,1)}\n",
+    "a = {}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 953,
+   "metadata": {
+    "code_folding": [],
     "collapsed": false
    },
    "outputs": [
@@ -446,22 +657,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "456.719292981\n",
-      "197.024215512\n",
-      "190.130295586\n",
-      "189.869291004\n",
-      "189.725359574\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/fonz/anaconda/envs/deep/lib/python2.7/site-packages/ipykernel/__main__.py:11: VisibleDeprecationWarning: using a boolean instead of an integer will result in an error in the future\n"
+      "393.427699022\n",
+      "393.204369971\n",
+      "392.982251122\n",
+      "392.761322332\n",
+      "392.541560437\n",
+      "392.322942418\n",
+      "392.105431123\n",
+      "391.888998762\n",
+      "391.673601197\n",
+      "391.459217244\n"
      ]
     }
    ],
    "source": [
+    "def train():\n",
+    "    for e in range(10):\n",
+    "        y_pred = forward_pass(X)\n",
+    "        backward_pass(y_pred)\n",
+    "        print (sum(cost(Y, predict(X))))        \n",
+    "def predict(X):\n",
+    "    predictions = []\n",
+    "    for i in range(X.shape[0]):\n",
+    "        predictions.append(forward_pass(X[i,:])[0][0])\n",
+    "    return np.array(predictions)\n",
+    "\n",
     "train()"
    ]
   }
