--- a/17.06.05-Neural-networks.ipynb
+++ b/17.06.05-Neural-networks.ipynb
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -454,13 +454,14 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "import scipy\n",
     "import sklearn.datasets\n",
     "cancer_data = sklearn.datasets.load_breast_cancer()\n",
-    "Y = cancer_data.target\n",
+    "Y = cancer_data.target.reshape(569,1)\n",
     "X = cancer_data.data\n",
     "X = (X - np.mean(X,axis=0)) / np.std(X,axis=0)\n",
-    "print (X.shape, y.shape)"
+    "print (X.shape, Y.shape)"
    ]
   },
   {
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 770,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -495,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 850,
+   "execution_count": 7,
    "metadata": {
     "code_folding": [],
     "collapsed": true
@@ -550,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 797,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -572,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 798,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -591,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 799,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -604,15 +605,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 950,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def backward_pass(y_pred):   \n",
-    "    delta_3 = (y-y_pred) # Compute delta_3 = de/da_2\n",
+    "def backward_pass(Y_pred):   \n",
+    "    delta_3 = (Y_pred-Y) # Compute delta_3 = de/da_2\n",
+    "#     print (delta_3)\n",
     "    \n",
     "    #First layer updates\n",
     "    \n",
@@ -632,22 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 952,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "learning_rate = 0.00001\n",
-    "W = {1: rand_init(30,5), 2: rand_init(5,1)}\n",
-    "h = {}\n",
-    "b = {1: rand_init(1,5), 2: rand_init(1,1)}\n",
-    "a = {}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 953,
+   "execution_count": 88,
    "metadata": {
     "code_folding": [],
     "collapsed": false
@@ -657,25 +644,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "393.427699022\n",
-      "393.204369971\n",
-      "392.982251122\n",
-      "392.761322332\n",
-      "392.541560437\n",
-      "392.322942418\n",
-      "392.105431123\n",
-      "391.888998762\n",
-      "391.673601197\n",
-      "391.459217244\n"
+      "224414.024325\n",
+      "223403.38667\n",
+      "221132.091974\n",
+      "219488.365817\n",
+      "218368.97003\n"
      ]
     }
    ],
    "source": [
+    "learning_rate = 0.000001\n",
+    "W = {1: rand_init(30,5), 2: rand_init(5,1)}\n",
+    "h = {}\n",
+    "b = {1: rand_init(1,5), 2: rand_init(1,1)}\n",
+    "a = {}\n",
+    "\n",
     "def train():\n",
-    "    for e in range(10):\n",
-    "        y_pred = forward_pass(X)\n",
-    "        backward_pass(y_pred)\n",
-    "        print (sum(cost(Y, predict(X))))        \n",
+    "    for e in range(5000):\n",
+    "        Y_pred = forward_pass(X)\n",
+    "        backward_pass(Y_pred)\n",
+    "        if e% 1000 == 0:\n",
+    "            print (np.sum(cost(Y, predict(X))))        \n",
     "def predict(X):\n",
     "    predictions = []\n",
     "    for i in range(X.shape[0]):\n",
@@ -683,6 +672,141 @@
     "    return np.array(predictions)\n",
     "\n",
     "train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601,  0.55036601,\n",
+       "        0.55036601,  0.55036601,  0.55036601,  0.55036601])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict(X)"
    ]
   }
  ],
